# network-static-analysis

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  HISTORY.md  MANIFEST.in  Makefile  Pipfile  README.md  SECURITY.md  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml  stale.yml
ci/: install.yml  lint.yml
nsa/: api.py  settings.py  utils.py
nsa/cli/: main.py  nsa.yml
nsa/plugin/: base.py  input.py  output.py  parser.py
nsa/rules/: 10-tacacs.yml  20-generic-passwords.yml
